# TradingPenguin

./: LICENSE.md  README.md  launch.ps1  pyproject.toml  settings.json
scripts/: build.py
src/tradingpenguin/: main.py
src/tradingpenguin/app/: __init__.py  app.py
src/tradingpenguin/app/components/: __init__.py  sidebar.py  sidebar_options.py
src/tradingpenguin/app/views/: __init__.py  main_window.py
src/tradingpenguin/core/: __init__.py  constants.py  exceptions.py  keys.py
src/tradingpenguin/core/base/: __init__.py  immutable_meta.py  key_enum.py  key_meta.py
src/tradingpenguin/core/configuration/: __init__.py  settings.py  settings_default.py  settingsprovider.py
src/tradingpenguin/core/data/: __init__.py  indicator.py  indicator_options.py
src/tradingpenguin/core/dataproviders/: __init__.py  query.py  query_params.py  yfquery.py
src/tradingpenguin/core/exporters/: __init__.py  excel_vba_writer.py  excel_writer.py
src/tradingpenguin/core/exporters/scripts/: plot_regime_chart.txt
src/tradingpenguin/core/utils/: __init__.py  logger.py  logmanager.py
