[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingpenguin"
version = "0.1.0"
description = "Trading bot to automate decisions for busy working professionals"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "TanJingMing", email = "jingming.tan12@gmail.com"}
]
dependencies = [
    "tradingpenguin-core"
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/tradingpenguin"]

[tool.ruff]
line-length = 100
target-version = "py311"